@@ -970,3 +970,5 @@ base graphics.
   
 0.100.20
   - open3d() now signals an error if unnamed parameters are used
+  - toggleWidget() now makes it easier to initialize the scene with
+    some objects hidden.
